change register response to simple
